# CHAMPAGNE

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  MANIFEST.in  README.md  VERSION  index.html  main.nf  main.py  mkdocs.yml  modules.json  nextflow.config  nextflow_schema.json  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  WORDLIST.txt  contributors.py  genome_docs.py  pull_request_template.md  release-guide.md
assets/: R64-1-1_ensembl2UCSC.txt  README.md  contrasts_full_mm10.tsv  contrasts_full_mm10.yml  contrasts_test.tsv  contrasts_test.yml  contrasts_test_dcssub.yml  contrasts_test_mm10.tsv  contrasts_test_mm10.yml  diffbind_report.Rmd  fastq_screen.conf  fastq_screen_ci.conf  multiqc_config.yaml  params.yml  samplesheet_full_mm10.csv  samplesheet_full_spikein.csv  samplesheet_human.csv  samplesheet_mm10.csv  samplesheet_test.csv  samplesheet_test_dcssim.csv  samplesheet_test_dcssub.csv  samplesheet_test_human.csv  samplesheet_test_mm10.csv  samplesheet_test_paired.csv  samplesheet_test_spikein.csv  slurm_header_biowulf.sh  slurm_header_frce.sh  test_human_metadata.csv  test_report.html
changelog/: index.html
conf/: base.config  biowulf.config  ci_stub.config  ci_test.config  containers.config  frce.config  full_human.config  full_mm10.config  genomes.config  interactive.config  modules.conf  modules.config  multiqc_config.yaml  production.config  slurmint.config  test.config  test_dcssim.config  test_dcssub.config  test_human.config  test_mm10.config  test_paired.config  test_spikein.config
contributing/: index.html
contributors/: index.html
dev/: 404.html  index.html  search.html
docs/: CHANGELOG.md  CONTRIBUTING.md  _genomes_head.md  _genomes_tail.md  _params_head.md  changelog.md  genomes.md  getting-started.md  index.md  manifests.md  nextflow.md  params.md  release-guide.md  spike-in.md  tree.txt  tree_test.txt  workflow.md
getting-started/: index.html
lib/: Utils.groovy
nextflow/: index.html
release-guide/: index.html
search/: search_index.json
src/: __main__.py  (+2 more)
(+177 files in other folders)
